--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-Ismaile
+<!DOCTYPE html>
+<html lang="bs">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Krizel-Krazel</title>
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap" rel="stylesheet">
+  <style>
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+
+    body {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #6b9e9a;
+    }
+
+    h1 {
+      font-family: 'Jost', sans-serif;
+      font-weight: 200;
+      font-size: 1rem;
+      letter-spacing: 0.5em;
+      text-transform: uppercase;
+      color: #2e2e2e;
+      text-shadow:
+        1px 1px 1px rgba(255,255,255,0.15),
+        -1px -1px 2px rgba(0,0,0,0.35);
+      animation: fadeIn 1.4s ease forwards;
+      opacity: 0;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+  </style>
+</head>
+<body>
+  <h1>Krizel-Krazel</h1>
+</body>
+</html>
