--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Krizel-Krazel</title>
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
@@ -17,15 +16,15 @@
     }
 
     h1 {
-      font-family: 'Jost', sans-serif;
-      font-weight: 200;
+      font-family: 'Gill Sans', 'Gill Sans MT', Calibri, sans-serif;
+      font-weight: 400;
       font-size: 1rem;
       letter-spacing: 0.5em;
       text-transform: uppercase;
       color: #2e2e2e;
       text-shadow:
-        1px 1px 1px rgba(255,255,255,0.15),
-        -1px -1px 2px rgba(0,0,0,0.35);
+        1px 1px 0px rgba(255,255,255,0.2),
+        -1px -1px 0px rgba(0,0,0,0.3);
       animation: fadeIn 1.4s ease forwards;
       opacity: 0;
     }
